# qagnn

./: .gitignore  config.py  download_preprocessed_data.sh  download_raw_data.sh  inspect_run_qagnn__csqa.sh  pyproject.toml  qagnn.py  requirements.txt  run_qagnn__csqa.sh  server-helper
docker/: Dockerfile  marimo.conf  marimo.sh
modeling/: legacy_model_config.py  modeling_encoder.py  modeling_qagnn.py
utils/: conceptnet.py  convert_csqa.py  data_utils.py  graph.py  grounding.py  layers.py  optimization_utils.py  parser_utils.py
