[project]
name = "qagnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.7.0"
dependencies = [
    "bottle>=0.13.4",
    "nltk>=3.8.1",
    "spacy>=2.1.6",
    "tokenizers==0.9.2",
    "torch==1.8.1+cu101",
    "torch-geometric==1.7.0",
    "torch-scatter==2.0.7",
    "torch-sparse==0.6.9",
    "torchaudio==0.8.1",
    "torchvision==0.9.1+cu101",
    "transformers==3.4.0",
]


[tool.uv]
find-links = ["https://download.pytorch.org/whl/torch_stable.html"]
